# localQuill

./: .env  .env.example  .gitignore  .webui_secret_key  README.md  base_models.json  base_models_27b.json  main.py  models.md  pyproject.toml  run_all_evals.sh  todo.md
.deepeval/: .deepeval_telemetry.txt
chroma/: chroma.txt
data/eval/: Fiction_First_Draft.docx  LotR_Chapter_1.txt
data/eval/texts/test_essay/: Article_C2_Profishency_Response_3.txt  Essay_C2_Masterclass_Response_A.txt  (+9 more)
data/grammar/: grammar.txt
data/styles/fantasy/: style.txt
reports/: eval_generation_essay_results.jsonl  eval_generation_fiction_results.jsonl  eval_generation_results.jsonl  eval_not_used.json  eval_results.jsonl  eval_retrieval_results.jsonl
src/: embeddings.py  model_query.py
src/embedding/: embeddings.py
src/evaluation/: metrics_generation.py  metrics_retrieval.py
src/frontend/: app.py
src/g_eval/: g_eval_metrics.py  retrieval_metrics.py
src/guardrails/: content_filter.py
src/middleware/: content_filter.py
src/vector_db/: chunk_documents.py  create_chunks.py  generate_chroma.py  load_documents.py  load_pdf.py  reset_db.py
test/: Testing.ipynb  g_eval_tests.py  retrieval_test_questions.json  simple_rag.ipynb  test_g_eval.py  test_rag.py  test_retrieval.py
test/chroma_eval/: chroma.sqlite3
tests/eval/: batch_llm_test.py  eval_config.py  retrieval_test_questions.json  run_generation_eval.py  run_retrieval_eval.py  test_g_eval.py
tests/notebooks/: visualize_report.ipynb  visualize_report_embedding.ipynb  visualize_report_llm.ipynb
tests/unit/: test_content_filter.py
(+4 files in other folders)
