[project]
name = "writers-guide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.10.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.9",
    "langchain-chroma>=1.1.0",
    "langchain-ollama>=1.0.1",
    "open-webui>=0.8.7",
    "pypdf>=6.7.0",
    "sentence-transformers>=5.2.2",
]
