[project]
name = "writers-guide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.10.0",
    "deepeval>=3.9.3",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.9",
    "langchain-chroma>=1.1.0",
    "langchain-huggingface>=1.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.0",
    "matplotlib>=3.10.8",
    "open-webui>=0.8.7",
    "pandas>=3.0.0",
    "psutil>=7.2.2",
    "pypdf>=6.7.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.2",
]
